Title, socials visibility, organiser links fixed. Goodbye Pink Flamingo event and event details list added

--- a/css/107_2024.css
+++ b/css/107_2024.css
@@ -34,7 +34,10 @@ hr
 
 #socials
 {
-	padding-top: 20px;
+	padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 20px;
+  background-color: #eb6d90;
 }
 
 /********************Games******************/
